# ray_tracer_challenge

./: Cargo.toml  README.md  clock.ppm  projectile.ppm
src/: canvas.rs  color.rs  lib.rs  matrix.rs  point.rs  rays.rs  tuples.rs  vector.rs
