[package]
name = "ray_tracer_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "ray_tracer_challenge"
path = "src/lib.rs"

[[bin]]
name = "projectile"
path = "src/bin/projectile.rs"

[[bin]]
name = "clock"
path = "src/bin/clock.rs"
